# automated-market-indicator-system

./: .env.example  .gitignore  README.md  docker-compose.yml  example.env  forecast-history-lines.patch
backend/: Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: routes.py
backend/src/app/core/: settings.py
backend/src/app/schemas/: prediction.py
backend/src/app/services/: excel_parser.py  forecaster.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  server.mjs
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
