[project]
name = "news-price-forecaster-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-multipart",
  "pandas",
  "openpyxl",
  "xlrd",
  "numpy",
  "httpx",
  "yfinance",
  "torch",
  "transformers",
  "nltk",
  "scikit-learn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
